add buscador, pagina info

--- a/assets/styles/tienda.css
+++ b/assets/styles/tienda.css
@@ -1,6 +1,3 @@
-*{
-    /* color: white; */
-}
 .card{
     max-height: 209px;
 }
@@ -13,10 +10,14 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
+    font-size: 15px;
+}
+.card-title{
+    font-size: 20px;
 }
 .fondo{
     background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(67,67,208,1) 35%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(67,67,208,1) 35%, rgba(0,212,255,1) 100%);
 }
 .negro{
     color: black;
