Agregar logo, pelis en otra paginaÃ

--- a/assets/styles/tienda.css
+++ b/assets/styles/tienda.css
@@ -4,6 +4,9 @@
 .fuente{
     font-family: 'Permanent Marker', cursive;
 }
+.logo{
+    height: 50px;
+}
 .cardt{
     display: -webkit-box;
     -webkit-line-clamp: 4;
