--- a/src/views/info.html
+++ b/src/views/info.html
@@ -17,7 +17,9 @@
     <header class="animate__animated animate__backInLeft">
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="../../index.html">
+                    <img src="../../assets/img/netflix.png" class="logo" alt="">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -41,6 +43,18 @@
         </nav>
     </header>
     <main>
+        <section>
+            <div class="container mt-5">
+                <div class="row">
+                    <div class="col-12">
+                        <input type="search" class="form-control my-2" placeholder="Buscar pelicula" id="buscar">
+                    </div>
+                </div>
+                <div id="fila" class="row row-cols-1 row-cols-md-3">
+
+                </div>
+            </div>
+        </section>
         <section>
             <div class="container my-5">
                 <div class="row justify-content-center">
