Agregar la ppagina info

--- a/assets/styles/tienda.css
+++ b/assets/styles/tienda.css
@@ -28,6 +28,12 @@
 .gris{
     color: gray;
 }
+.blanco{
+    color: white;
+}
+.minimo{
+    min-height: 800px;
+}
 footer{
     height: 50px;
     background-color: rgb(33,37,41);
