--- a/src/views/peliculas.html
+++ b/src/views/peliculas.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../../assets/styles/tienda.css">
     <title>Tienda</title>
 </head>
-<body class="fondo blanco">
+<body class="fondo">
     <header class="animate__animated animate__backInLeft">
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
@@ -29,10 +29,10 @@
                         <a class="nav-link" aria-current="page" href="../../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./peliculas.html">Peliculas</a>
+                        <a class="nav-link active" href="#">Peliculas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="#">Info</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled">Disabled</a>
@@ -44,35 +44,14 @@
     </header>
     <main>
         <section>
-            <div class="container my-5">
-                <div class="row justify-content-center">
-                    <div class="col-12 col-md-5">
-                        <img class="img-fluid w-100" src="../../assets/img/batman.jpg" alt="">
+            <div class="container mt-5 minimo">
+                <div class="row">
+                    <div class="col-12">
+                        <input type="search" class="form-control my-2" placeholder="Buscar pelicula" id="buscar">
                     </div>
-                    <div class="col-12 col-md-6 border-start">
-                        <h1 class="fuente mb-5">Batman</h1>
-                        <p class="mb-5">Moonshot sucede en un futuro en que la élite humana ha hecho habitable y colonizado Marte. Dos estudiantes universitarios se unen y embarcan en una lanzadera espacial para viajar al Planeta Rojo y reunirse con sus seres queridos.</p>
-                        <i class="bi bi-star"></i>
-                        <i class="bi bi-star"></i>
-                        <i class="bi bi-star"></i>
-                        <i class="bi bi-star"></i>
-                        <i class="bi bi-star"></i>
-                        <p class="my-3">$ 50000</p>
-                        <img src="../../assets/img/american.png" class="img-fluid">
-                        <img src="../../assets/img/maestro.png" class="img-fluid">
-                        <img src="../../assets/img/visa.png" class="img-fluid">
-                        <br><br><br>
-                        <h4><i class="bi bi-truck"></i> Envio a nivel nacional</h4>
-                        <p>Conoce los tiempos y las formas de envio</p>
-                        <h4 class="my-3"><i class="bi bi-arrow-down-left"></i>Devolucion gratis</h4>
-                        <p>Tienes 30 dias desde que lo recibes</p>
-                        
-                        <div class="mb-3">
-                            <label class="form-label">Cantidad</label>
-                            <input min="1"  type="number" onkeydown="return false"  placeholder="1" id="cantidad">
-                        </div>
-                        <button type="submit" class="btn btn-primary fuente w-100">Añadir al carrito</button>
-                    </div>
+                </div>
+                <div id="fila" class="row row-cols-1 row-cols-md-3">
+
                 </div>
             </div>
         </section>
@@ -82,5 +61,6 @@
         <a href="https://github.com/sebasVV515/Tienda">GitHub</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="../controllers/controladorHome.js" type="module"></script>
 </body>
 </html>
