--- a/src/views/info.html
+++ b/src/views/info.html
@@ -25,18 +25,28 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../../index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./peliculas.html">Peliculas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="../../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./peliculas.html">Peliculas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled">Disabled</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="../../index.html">
+                                <i class="bi bi-cart3 fs-3"></i>
+                                <span id="cantCarrito" class="position-absolute top-45 start-350 translate-middle badge rounded-pill bg-danger">
+                                    0
+                                </span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -47,17 +57,19 @@
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="col-12 col-md-5">
-                        <img class="img-fluid w-100" src="../../assets/img/batman.jpg" alt="">
+                        <img class="img-fluid w-100" id="imagen" src="../../assets/img/batman.jpg" alt="">
                     </div>
                     <div class="col-12 col-md-6 border-start">
-                        <h1 class="fuente mb-5">Batman</h1>
-                        <p class="mb-5">Moonshot sucede en un futuro en que la élite humana ha hecho habitable y colonizado Marte. Dos estudiantes universitarios se unen y embarcan en una lanzadera espacial para viajar al Planeta Rojo y reunirse con sus seres queridos.</p>
-                        <i class="bi bi-star"></i>
-                        <i class="bi bi-star"></i>
-                        <i class="bi bi-star"></i>
-                        <i class="bi bi-star"></i>
-                        <i class="bi bi-star"></i>
-                        <p class="my-3">$ 50000</p>
+                        <h1 class="fuente mb-5" id="titulo">Batman</h1>
+                        <p class="mb-5" id="descripcion">Moonshot sucede en un futuro en que la élite humana ha hecho habitable y colonizado Marte. Dos estudiantes universitarios se unen y embarcan en una lanzadera espacial para viajar al Planeta Rojo y reunirse con sus seres queridos.</p>
+                        <div id="calificacion">
+                            <i id="star1" class="bi bi-star"></i>
+                            <i id="star2" class="bi bi-star"></i>
+                            <i id="star3" class="bi bi-star"></i>
+                            <i id="star4" class="bi bi-star"></i>
+                            <i id="star5" class="bi bi-star"></i>
+                        </div>
+                        <p class="my-3" id="precio">$ 50000</p>
                         <img src="../../assets/img/american.png" class="img-fluid">
                         <img src="../../assets/img/maestro.png" class="img-fluid">
                         <img src="../../assets/img/visa.png" class="img-fluid">
@@ -69,9 +81,9 @@
                         
                         <div class="mb-3">
                             <label class="form-label">Cantidad</label>
-                            <input min="1"  type="number" onkeydown="return false"  placeholder="1" id="cantidad">
+                            <input min="1"  type="number" onkeydown="return false" value="1"  placeholder="1" id="cantidad">
                         </div>
-                        <button type="submit" class="btn btn-primary fuente w-100">Añadir al carrito</button>
+                        <button type="submit" id="agregar" class="btn btn-primary fuente w-100">Añadir al carrito</button>
                     </div>
                 </div>
             </div>
@@ -81,6 +93,7 @@
         Todos los derechos reservados
         <a href="https://github.com/sebasVV515/Tienda">GitHub</a>
     </footer>
+    <script src="../controllers/controladorCompra.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
