--- a/src/views/info.html
+++ b/src/views/info.html
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../../index.html">Home</a>
+                            <a class="nav-link" href="../../index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./peliculas.html">Peliculas</a>
@@ -40,7 +40,7 @@
                     </ul>
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../../index.html">
+                            <a class="nav-link"href="./carrito.html">
                                 <i class="bi bi-cart3 fs-3"></i>
                                 <span id="cantCarrito" class="position-absolute top-45 start-350 translate-middle badge rounded-pill bg-danger">
                                     0
@@ -57,7 +57,7 @@
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="col-12 col-md-5">
-                        <img class="img-fluid w-100" id="imagen" src="../../assets/img/batman.jpg" alt="">
+                        <img class="img-fluid w-100" id="imagen" src="../../assets/img/placeholder.jpg" alt="">
                     </div>
                     <div class="col-12 col-md-6 border-start">
                         <h1 class="fuente mb-5" id="titulo">Batman</h1>
@@ -84,6 +84,9 @@
                             <input min="1"  type="number" onkeydown="return false" value="1"  placeholder="1" id="cantidad">
                         </div>
                         <button type="submit" id="agregar" class="btn btn-primary fuente w-100">Añadir al carrito</button>
+                        <div id="notification" class="mt-4 alert alert-success invisible" role="alert">
+                            A simple success alert—check it out!
+                        </div>
                     </div>
                 </div>
             </div>
@@ -93,7 +96,7 @@
         Todos los derechos reservados
         <a href="https://github.com/sebasVV515/Tienda">GitHub</a>
     </footer>
-    <script src="../controllers/controladorCompra.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="../controllers/controladorCompra.js"></script>
 </body>
 </html>
