--- a/src/views/info.html
+++ b/src/views/info.html
@@ -53,7 +53,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="pt-1">
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="col-12 col-md-5">
@@ -84,8 +84,8 @@
                             <input min="1"  type="number" onkeydown="return false" value="1"  placeholder="1" id="cantidad">
                         </div>
                         <button type="submit" id="agregar" class="btn btn-primary fuente w-100">Añadir al carrito</button>
-                        <div id="notification" class="mt-4 alert alert-success invisible" role="alert">
-                            A simple success alert—check it out!
+                        <div id="notification" class="mt-4 alert alert-success invisible">
+                            Agregado al carrito
                         </div>
                     </div>
                 </div>
