--- a/src/views/carrito.html
+++ b/src/views/carrito.html
@@ -53,12 +53,13 @@
         </nav>
     </header>
     <main>
-        <section class="row">
-            <div id="contenedor" class="container my-5 col-12 col-md-7">
-            
+        <section class="row cCarrito">
+            <div id="contenedor" class="container my-5 col-12 col-md-7 carrito">
             </div>
-            <div id="detalles" class="col-12 col-md-4">
-                <p id="cantidad"></p>
+            <div id="detalles" class="container col-12 col-md-4 detalles">
+                <h3 id="cantidadtotal"></h3>
+                <h3 id="total"></h3>
+                <button type="button" id="btnborrar" class="btn btn-primary disabled"><i class="bi bi-trash"></i> Limpiar</i></button>
             </div>
         </section>
     </main>
@@ -66,7 +67,7 @@
         Todos los derechos reservados
         <a href="https://github.com/sebasVV515/Tienda">GitHub</a>
     </footer>
-    <script src="../controllers/controladorCarrito.js"></script>
+    <script src="../controllers/controladorCarrito.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
