--- a/src/views/registro.html
+++ b/src/views/registro.html
@@ -11,9 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../../assets/styles/tienda.css">
-    <title>Carrito</title>
+    <title>Registro</title>
 </head>
-<body class="fondo">
+<body>
     <header class="animate__animated animate__backInLeft">
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
@@ -25,22 +25,22 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="../../index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./peliculas.html">Peliculas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled">Disabled</a>
-                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="../../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="./peliculas.html">Peliculas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Info</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled">Disabled</a>
+                    </li>
                     </ul>
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" href="">
+                            <a class="nav-link"href="./carrito.html">
                                 <i class="bi bi-cart3 fs-3"></i>
                                 <span id="cantCarrito" class="position-absolute top-45 start-350 translate-middle badge rounded-pill bg-danger">
                                     0
@@ -53,22 +53,30 @@
         </nav>
     </header>
     <main>
-        <section class="row cCarrito">
-            <div id="contenedor" class="container my-5 col-12 col-md-7 carrito">
-            </div>
-            <div id="detalles" class="container col-12 col-md-3 detalles">
-                <h3 id="cantidadtotal"></h3>
-                <h3 id="total"></h3>
-                <button type="button" id="btnborrar" class="btn btn-primary disabled"><i class="bi bi-trash"></i> Limpiar</button>
-                <button type="button" id="btnmoneda" class="btn btn-primary"><i class="bi bi-currency-exchange"></i><span id="monedatxt"> COP - USD</span></button>
-            </div>
-        </section>
+        <div class="row registro2">  
+            <img class="col-4 imgregistro" src="../../assets/img/registro.png" alt="">
+            <form class="col-7 registro">
+                <legend>Registro</legend>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1"><i class="bi bi-envelope"></i></span>
+                    <input type="email" class="form-control" id="usuario" placeholder="Username">
+                  </div>
+                  <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1"><i class="bi bi-lock-fill"></i></span>
+                    <input type="password" class="form-control" id="contrasena" placeholder="Password">
+                    <span class="input-group-text" id="mostrar"><i id="ojo" class="bi bi-eye-slash"></i></span>
+                  </div>
+                <button type="submit" id="btnregistro" class="btn btn-primary">Registrar</button>
+            </form>
+        </div>
     </main>
     <footer class="gris">
         Todos los derechos reservados
         <a href="https://github.com/sebasVV515/Tienda">GitHub</a>
     </footer>
-    <script src="../controllers/controladorCarrito.js" type="module"></script>
+    <script src="../helpers/auth.js" type="module"></script>
+    <script src="../controllers/controladorRegistro.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="../controllers/controladorGeneral.js"></script>
 </body>
 </html>
