--- a/src/views/peliculas.html
+++ b/src/views/peliculas.html
@@ -60,6 +60,27 @@
                         <input type="search" class="form-control my-2" placeholder="Buscar pelicula" id="buscar">
                     </div>
                 </div>
+                <div class="col-12">
+                    <ul id="filtros" class="filtros">
+                        <li>Acción</li>
+                        <li>Comedia</li>
+                        <li>Aventura</li>
+                        <li>Ciencia ficción</li>
+                        <li>Familia</li>
+                        <li>Drama</li>
+                        <li>Terror</li>
+                        <li>Suspense</li>
+                        <li>Misterio</li>
+                        <li>Drama</li>
+                        <li>Historia</li>
+                        <li>Romance</li>
+                        <li>Animación</li>
+                        <li>Fantasía</li>
+                        <li>Música</li>
+                        <li>Documental</li>
+                        <li>Bélica</li>
+                    </ul>
+                </div>
                 <div id="fila" class="row row-cols-1 row-cols-md-3">
                 
                 </div>
@@ -73,5 +94,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="../controllers/controladorProductos.js" type="module"></script>
     <script src="../controllers/controladorGeneral.js"></script>
+    <script src="../controllers/controladorFiltro.js" type="module"></script>
 </body>
 </html>
