--- a/assets/styles/tienda.css
+++ b/assets/styles/tienda.css
@@ -18,7 +18,7 @@ main{
 }
 .cardt{
     display: -webkit-box;
-    -webkit-line-clamp: 4;
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -94,4 +94,23 @@ footer{
 }
 .imgregistro{
     width: 400px;
+}
+.filtros{
+    display: flex;
+    padding: 0;
+    list-style: none;
+    justify-content: space-around;
+}
+.filtros li{
+    height: 30px;
+    padding: 0 5px;
+    background: gray;
+    border-radius: 5px;
+    line-height: 30px;
+    color: white;
+    cursor: pointer;
+}
+.filtros :hover{
+    background-color: white;
+    color: black;
 }
