filtro, usd to COP

--- a/src/views/info.html
+++ b/src/views/info.html
@@ -31,12 +31,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./peliculas.html">Peliculas</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled">Disabled</a>
-                        </li>
                     </ul>
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
@@ -81,7 +75,7 @@
                         
                         <div class="mb-3">
                             <label class="form-label">Cantidad</label>
-                            <input min="1"  type="number" onkeydown="return false" value="1"  placeholder="1" id="cantidad">
+                            <input style="width: 50px;" min="1"  type="number" onkeydown="return false" value="1"  placeholder="1" id="cantidad">
                         </div>
                         <button type="submit" id="agregar" class="btn btn-primary fuente w-100">Añadir al carrito</button>
                         <div id="notification" class="mt-4 alert alert-success invisible">
