--- a/src/views/peliculas.html
+++ b/src/views/peliculas.html
@@ -31,12 +31,6 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Peliculas</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Info</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
-                    </li>
                     </ul>
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
@@ -79,6 +73,7 @@
                         <li>Música</li>
                         <li>Documental</li>
                         <li>Bélica</li>
+                        <li class="lfiltro"><i class="bi bi-funnel"></i></li>
                     </ul>
                 </div>
                 <div id="fila" class="row row-cols-1 row-cols-md-3">
