--- a/assets/styles/tienda.css
+++ b/assets/styles/tienda.css
@@ -9,6 +9,7 @@ main{
 }
 .card{
     max-height: 209px;
+    cursor: pointer;
 }
 .fuente{
     font-family: 'Permanent Marker', cursive;
@@ -77,7 +78,7 @@ footer{
 .detalles{
     background: white;
     margin-top: 55px;
-    height: 70vh;
+    height: 40vh;
     position: fixed;
     right: 0;
     border-bottom-left-radius: 5px;
@@ -113,4 +114,11 @@ footer{
 .filtros :hover{
     background-color: white;
     color: black;
+}
+.lfiltro{
+    background-color: white !important;
+    color: black !important;
+}
+.lfiltro :hover{
+    color: red !important;
 }
