--- a/src/views/carrito.html
+++ b/src/views/carrito.html
@@ -48,7 +48,7 @@
     </header>
     <main>
         <section class="row cCarrito">
-            <div id="contenedor" class="container my-5 col-12 col-md-7 carrito">
+            <div id="contenedor" class="container my-5 col-12 col-md-7">
             </div>
             <div id="detalles" class="container col-12 col-md-3 detalles">
                 <h3 id="cantidadtotal"></h3>
