--- a/src/views/info.html
+++ b/src/views/info.html
@@ -78,7 +78,7 @@
                             <input style="width: 50px;" min="1"  type="number" onkeydown="return false" value="1"  placeholder="1" id="cantidad">
                         </div>
                         <button type="submit" id="agregar" class="btn btn-primary fuente w-100">Añadir al carrito</button>
-                        <div id="notification" class="mt-4 alert alert-success invisible">
+                        <div id="notification" class="mt-4 alert alert-success invisible text-center">
                             Agregado al carrito
                         </div>
                     </div>
