--- a/src/views/registro.html
+++ b/src/views/registro.html
@@ -29,7 +29,7 @@
                         <a class="nav-link" aria-current="page" href="../../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="./peliculas.html">Peliculas</a>
+                        <a class="nav-link" href="./peliculas.html">Peliculas</a>
                     </li>
                     </ul>
                     <ul class="navbar-nav ms-auto">
