--- a/src/views/carrito.html
+++ b/src/views/carrito.html
@@ -53,7 +53,7 @@
             <div id="detalles" class="container col-12 col-md-3 detalles">
                 <h3 id="cantidadtotal"></h3>
                 <h3 id="total"></h3>
-                <button type="button" id="btnborrar" class="btn btn-primary disabled"><i class="bi bi-trash"></i> Limpiar</button>
+                <button type="button" id="btnborrar" class="btn btn-danger disabled"><i class="bi bi-trash"></i> Limpiar</button>
                 <button type="button" id="btnmoneda" class="btn btn-primary"><i class="bi bi-currency-exchange"></i><span id="monedatxt"> COP - USD</span></button>
             </div>
         </section>
