--- a/src/views/registro.html
+++ b/src/views/registro.html
@@ -61,10 +61,14 @@
                     <span class="input-group-text" id="mostrar"><i id="ojo" class="bi bi-eye-slash"></i></span>
                   </div>
                 <button type="submit" id="btnregistro" class="btn btn-primary">Registrar</button>
+                <div id="notification" class="mt-4 alert alert-warning invisible text-center">
+                    Agregado al carrito
+                </div>
             </form>
         </div>
+        
     </main>
-    <footer class="gris">
+    <footer class="gris pie">
         Todos los derechos reservados
         <a href="https://github.com/sebasVV515/Tienda">GitHub</a>
     </footer>
