--- a/src/views/peliculas.html
+++ b/src/views/peliculas.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../../assets/styles/tienda.css">
     <title>Tienda</title>
 </head>
-<body class="fondo">
+<body class="fondo scroll-y">
     <header class="animate__animated animate__backInLeft">
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
@@ -79,6 +79,7 @@
                 <div id="fila" class="row row-cols-1 row-cols-md-3">
                 
                 </div>
+                <div id="product"></div>
             </div>
         </section>
     </main>
