--- a/src/views/carrito.html
+++ b/src/views/carrito.html
@@ -49,7 +49,9 @@
     <main>
         <section class="row cCarrito">
             <div id="contenedor" class="container my-5 col-12 col-md-7">
+                
             </div>
+            <div id="canecaborrar" class="caneca"></div>
             <div id="detalles" class="container col-12 col-md-3 detalles">
                 <h3 id="cantidadtotal"></h3>
                 <h3 id="total"></h3>
